--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     },
 	"autoload" : {
 		"psr-4" : {
-			"bjc\\roundcubeimap\\" : "src"
+			"bjc\\roundcubeimap\\" : "src",
+			"bjc\\rcube\\" : "lib/roundcube"
 		}
 	}
 }
