--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
     },
 	"autoload" : {
 		"psr-4" : {
-			"bjc\\roundcubeimap\\" : "src",
-			"bjc\\rcube\\" : "lib/roundcube"
+			"bjc\\roundcubeimap\\" : "src"
 		}
 	}
 }
